--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="row g-5 align-items-center">
             <div class="col-lg-6">
               <h2 class="h3 text-white mb-3">Eigene Bilder & Videos einfügen</h2>
-              <p class="text-slate-300">Lege deine Dateien im Ordner <code>assets/gallery</code> oder <code>assets/video</code> ab und ergänze sie in <code>assets/js/gallery-data.js</code>. Jeder Eintrag kann mehrere Tags, Beschreibungen und einen Poster-Frame für Videos enthalten.</p>
+              <p class="text-slate-300">Lege deine Dateien im Ordner <code>assets/gallery</code> ab und führe danach <code>npm run generate:manifest</code> aus. Das Manifest aktualisiert die Galerie automatisch – optional kannst du weiterhin manuell Einträge in <code>assets/js/gallery-data.js</code> pflegen.</p>
               <div class="d-flex flex-wrap gap-3 mt-4">
                 <div class="badge text-bg-info text-dark px-3 py-2"><i class="bi bi-images me-2"></i>Batch-Upload ready</div>
                 <div class="badge text-bg-warning text-dark px-3 py-2"><i class="bi bi-aspect-ratio me-2"></i>Auto Responsive</div>
@@ -117,20 +117,16 @@
             </div>
             <div class="col-lg-6">
               <div class="p-4 rounded-4 bg-dark-subtle h-100">
-                <pre class="mb-0 text-dark-emphasis small"><code>// assets/js/gallery-data.js
+                <pre class="mb-0 text-dark-emphasis small"><code># Terminal
+npm run generate:manifest
+
+# Fallback-Eintrag in assets/js/gallery-data.js
 {
   type: 'image',
   title: 'Mein Shooting',
   description: 'Kurzer Mood-Text',
   src: 'assets/gallery/mein-bild.jpg',
   tags: ['Studio', 'Portrait']
-},
-{
-  type: 'video',
-  title: 'Behind the Scenes',
-  src: 'assets/video/bts.mp4',
-  poster: 'assets/gallery/bts-cover.jpg',
-  tags: ['Video', 'Team']
 }</code></pre>
               </div>
             </div>
